<?xml version="1.0"?>
<package format="3">
    <name>livox_repub</name>
    <version>0.0.0</version>
    <description>The pcd2pgm package</description>

    <maintainer email="eric@gmail.com">eric</maintainer>

    <license>GPLv2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- ROS 2 Dependency tags -->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>livox_ros_driver2</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
