<?xml version="1.0"?>
<package>
    <name>livox_repub</name>
    <version>0.0.0</version>

    <description>This is a livox_repub package</description>

    <maintainer email="xxxxx@xxx.com">xxx</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>livox_ros_driver</build_depend>

    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>livox_ros_driver</run_depend>

</package>
